feat(apple-purchase-verification/java): JWS + PKCS#7 verifiers, Java 8
Problem: backends need to prove purchase data came from Apple without
calling the deprecated verifyReceipt endpoint or any Apple server, and
old StoreKit 1 clients (iOS <15 or unmigrated apps) still send legacy
PKCS#7 receipts, so both formats must verify locally.
Solution: implement PLAN.md §2 in full. JwsVerifier validates StoreKit 2
compact JWS (ES256 only, exactly-3 x5c chain, Apple marker OIDs on leaf
and intermediate, PKIX to pinned roots at the payload's signedDate,
claim checks with accept-set environments per D3, optional staleness
per D5). ReceiptVerifier ports Apple's on-device receipt validation to
the server: CMS chain to the pinned Apple Inc. Root CA at receipt
creation time, signature check, full ASN.1 attribute parsing incl.
in-app purchases, and the optional device-hash binding (D4).
Baseline is Java 8 (D2): built --release 8 (verified major version 52),
plain POJOs, manual P1363-to-DER ES256 conversion since the JCA P1363
algorithm is Java 9+. Tests generate a fake Apple PKI and cover forged
chains, tampered payloads, wrong purpose OIDs, expired-cert/backdated
scenarios, staleness, and device-hash mismatch: 32 tests, all passing.
Validation: mvn test green on JDK 21 building release-8 bytecode; a
real-JDK-8 CI matrix and real receipt fixtures (D6) are on the roadmap.

Co-Authored-By: Claude <noreply@anthropic.com>